package edu.ipp.isep.dei.dimei.retailproject.domain.enums;

public enum RoleEnum {
    ADMIN, USER
}
