package edu.ipp.isep.dei.dimei.retailproject.domain.enums;

public enum OrderStatusEnum {
    PENDING, APPROVED, REJECTED, SHIPPED, DELIVERED, CANCELLED
}
