package edu.ipp.isep.dei.dimei.retailproject.domain.enums;

public enum PaymentMethodEnum {
    PAYPAL, CARD
}
