@startuml

class Account {
  - id: int
  - email: String
  - password: String
}
class Address {
  - id: int
  - street: String
  - zipCode: String
  - city: String
  - country: String
}
class Category {
  - id: int
  - name: String
  - description: String
}
class Item {
  - id: int
  - name: String
  - sku: String
  - description: String
  - price: double
}
class Merchant {
  - id: int
  - name: String
  - email: String
}
class MerchantOrder {
  - id: int
  - orderDate: Instant
}
class Order {
  - id: int
  - orderDate: Instant
}
class Payment {
  - id: int
  - amount: double
  - paymentDateTime: Instant
}
class ShippingOrder {
  - id: int
  - shippingOrderDate: Instant
}
class User {
  - id: int
  - firstname: String
  - lastname: String
}
interface IValueObject << interface >>
class ItemQuantity {
  - id: int
  - price: double
}
class OrderQuantity {
  - quantity: int
}
class StockQuantity {
  - quantity: int
}
enum MerchantOrderStatusEnum << enumeration >> {
  + PENDING:
  + APPROVED:
  + REJECTED:
  + SHIPPED:
  + CANCELLED:
  + DELIVERED:
}
enum OrderStatusEnum << enumeration >> {
  + PENDING:
  + APPROVED:
  + REJECTED:
  + SHIPPED:
  + CANCELLED:
  + DELIVERED:
}
enum PaymentMethodEnum << enumeration >> {
  + PAYPAL:
  + CARD:
}
enum PaymentStatusEnum << enumeration >> {
  + ACCEPTED:
  + PENDING:
  + REJECTED:
}
enum RoleEnum << enumeration >> {
  + ADMIN:
  + USER:
  + MERCHANT:
}
enum ShippingOrderStatusEnum << enumeration >> {
  + PENDING:
  + APPROVED:
  + REJECTED:
  + SHIPPED:
  + CANCELLED:
  + DELIVERED:
}

together {
class ShippingOrder
enum ShippingOrderStatusEnum
}
together {
class MerchantOrder
enum MerchantOrderStatusEnum
class Merchant
}
together {
class Order
enum OrderStatusEnum
class ItemQuantity
class Payment
enum PaymentMethodEnum
enum PaymentStatusEnum
class OrderQuantity
}
together {
class ItemQuantity
class Item
class OrderQuantity
class StockQuantity
class Category
interface IValueObject
}

ShippingOrder -[hidden]-> ShippingOrderStatusEnum
ShippingOrder -[hidden]-> MerchantOrder
MerchantOrder -[hidden]-> MerchantOrderStatusEnum
MerchantOrderStatusEnum -[hidden]left- ShippingOrder
Account -[hidden]-> RoleEnum
Payment --[hidden]--> Category

Account                 *--right> "role" RoleEnum
Address                 "*" ----> "user\n1" User
Item                    *-right> "category\n1" Category
Item                    ----> "merchant\n1" Merchant
Item                    *--> "quantityInStock\n1" StockQuantity
ItemQuantity            *-> "item\n1" Item
ItemQuantity            *--> "quantityOrdered\n1" OrderQuantity
Merchant                --> "address\n1" Address
MerchantOrder           *--> "merchant\n1" Merchant
MerchantOrder           *-> "status" MerchantOrderStatusEnum
MerchantOrder           ----up> "order\n1" Order
MerchantOrder           -> "user\n1" User
Order                   *-> "itemQuantities\n*" ItemQuantity
Order                   *-> "status" OrderStatusEnum
Order                   --up> "payment\n1" Payment
Order                   -> "user\n1" User
Payment                 *--up> "paymentMethod" PaymentMethodEnum
Payment                 *--up> "status" PaymentStatusEnum
ShippingOrder           -> "shippingAddress\n1" Address
ShippingOrder           -left> "merchantOrder\n1" MerchantOrder
ShippingOrder           -up> "order\n1" Order
ShippingOrder           *-left> "status" ShippingOrderStatusEnum
ShippingOrder           -> "user\n1" User
User                    *--> "account\n1" Account
OrderQuantity            --^  IValueObject
StockQuantity            --^  IValueObject

@enduml
